add date intern

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- Footer -->
     <footer id="main-footer" class="bg-dark text-center py-1">
         <div class="container">
-            <p>Copyright &copy; 2019, EdgeLedger, All Rights Reserved</p>
+            <p>Training &copy; Pi Software | 31/1/2022</p>
         </div>
     </footer>
 
