--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8" />
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <i class="fas fa-chalkboard-teacher fa-2x"></i>
+                    <i class="fas fa-user-check fa-2x"></i>
                     <div>
                         <h3>Weekly report</h3>
                         <p>
