--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="#what">What</a></li>
             <li><a href="#who">Who</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#">Đăng nhập</a></li>
         </ul>
     </div>
     <!-- Header: Showcase -->
@@ -104,14 +105,15 @@
                 <span class="text-primary">Our</span> Avatar    
             </h2>
             <div class="items py-1">
-            <div style="display: flex;flex-direction: column;align-items: center;"><img src="./img/logos/2.jpg" alt="Client"><p>LE VIET HUNG</p></div>
-            <div style="display: flex;flex-direction: column;align-items: center;"><img src="./img/logos/2.jpg" alt="Client"><p>QUOC PHUONG</p></div>
-            <div style="display: flex;flex-direction: column;align-items: center;"><img src="./img/logos/1.jpg" alt="Client"><p>ANH TUAN</p></div>
-            <div style="display: flex;flex-direction: column;align-items: center;"><img src="./img/logos/1.jpg" alt="Client"><p>VIET PHOP</p></div>
-            <div style="display: flex;flex-direction: column;align-items: center;"><img src="./img/logos/1.jpg" alt="Client"><p>CONG TRI</p></div>
-           
+                <center><div style="margin: 0 auto; display: flex;flex-direction: row;align-items: center; justify-content: space-around; gap: 20px;">
+                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/2.jpg" alt="Client"><center><p>LE VIET HUNG <br>Date of birth: 08/04/2001 <br>School address: 32 Le Loi</center></p></div>
+                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/1.jpg" alt="Client"><center><p>QUOC PHUONG <br>Date of birth: 08/04/2001<br>School address: 32 Le Loi</center></p></div>
+                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/1.jpg" alt="Client"><center><p>ANH TUAN<br>Date of birth: 08/04/2001<br>School address: 77 Nguyen Hue</p></center></div>
+                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/1.jpg" alt="Client"><center><p>VIET PHOP <br>Date of birth: 08/04/2001 <br>School address: 77 Nguyen Hue</p></center></div>
+                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/1.jpg" alt="Client"><center><p>CONG TRI <br>Date of birth: 08/04/2001
+  <br>School address: 77 Nguyen Hue</p></div></center>
+                </div>
             </div>
-        
         </div>
     </section>
 
