--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#what">What</a></li>
             <li><a href="#who">Who</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#">Đăng nhập</a></li>
+            <li><a href="#">Login</a></li>
         </ul>
     </div>
     <!-- Header: Showcase -->
