--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                 <span class="text-primary">Our</span> Avatar    
             </h2>
             <div class="items py-1">
-                <center><div style="margin: 0 auto; display: flex;flex-direction: row;align-items: center; justify-content: space-around; gap: 20px;">
-                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/2.jpg" alt="Client"><center><p>LE VIET HUNG <br>Date of birth: 08/04/2001 <br>School address: 32 Le Loi</center></p></div>
-                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/1.jpg" alt="Client"><center><p>QUOC PHUONG <br>Date of birth: 08/04/2001<br>School address: 32 Le Loi</center></p></div>
-                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/1.jpg" alt="Client"><center><p>ANH TUAN<br>Date of birth: 08/04/2001<br>School address: 77 Nguyen Hue</p></center></div>
+                <div style="margin: 0 auto; display: flex;flex-direction: row;align-items: center; justify-content: space-around; gap: 20px;">
+                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/1.jpg" alt="Client"><center><p>LE VIET HUNG <br>Date of birth: 08/04/2001 <br>School address: 32 Le Loi</center></p></div>
+                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/2.jpg" alt="Client"><center><p>QUOC PHUONG <br>Date of birth: 08/04/2001<br>School address: 32 Le Loi</center></p></div>
+                    <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/2.jpg" alt="Client"><center><p>ANH TUAN<br>Date of birth: 08/04/2001<br>School address: 77 Nguyen Hue</p></center></div>
                     <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/1.jpg" alt="Client"><center><p>VIET PHOP <br>Date of birth: 08/04/2001 <br>School address: 77 Nguyen Hue</p></center></div>
                     <div style="display: flex;flex-direction: column;align-items: center; width: 200px; height: 200px;"><img src="./img/logos/1.jpg" alt="Client"><center><p>CONG TRI <br>Date of birth: 08/04/2001
   <br>School address: 77 Nguyen Hue</p></div></center>
